# FactSquid

./: .gitignore  CLAUDE.md  README.md  data-model.md  system-design.md  workflow-change-loop.md
poc/: PLAN.md  README.md  SPECIFICATION.md  corpus.py  embed.py  llm.py  pyproject.toml  reconstruct.py  run_change.py  run_iteration.py  run_onboarding.py  schemas.py
poc/archive/: reconstruct.py  run_iteration.py  run_onboarding.py
poc/archive/prompts/: fact_decomposition.j2  heading_hierarchy_extraction.j2  topic_tag_inference.j2
poc/archive/traces/: 0001__11_scope_inference__test_doc_1_school_hours.json  0002__01_topic_scanning__test_doc_1_school_hours_school_hours_and_attendanc.json  0003__01_topic_scanning__test_doc_1_school_hours_school_hours_punctuality_a.json  0004__04_fact_extraction__attendance_absences.json  0005__04_fact_extraction__attendance_late_arrivals.json  0006__04_fact_extraction__pick_up_early_pick_ups.json  0007__04_fact_extraction__pick_up_late_pick_ups.json  0008__04_fact_extraction__punctuality_importance.json  0009__04_fact_extraction__school_hours_and_attendance_attendance.json  0010__04_fact_extraction__school_hours_and_attendance_general.json  0011__04_fact_extraction__school_hours_arrival_time.json  0012__04_fact_extraction__school_hours_departure_time.json  (+2 more)
poc/iterations/: README.md
poc/output/: corpus.json  proposals.json
poc/prompts/: affected_fact_identification.j2  fact_content_drafting.j2  fact_extraction.j2  reconstruction_critique.j2  root_cause_analysis.j2  scope_inference.j2  topic_scanning.j2  topic_tag_recommendation.j2
(+167 files in other folders)
