[project]
name = "factsquid-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "jinja2",
    "numpy",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.36"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
embed = ["sentence-transformers>=3.0"]

[tool.ruff]
line-length = 100
